@@ -7,13 +7,14 @@ The following are instructive demos of using FINUFFT for a variety of
 spectrally-related tasks arising in
 scientific computing and signal/image processing. We will slowly grow the
 list (contact us to add one).
-For conciseness of code, and ease of writing, they are
+For conciseness of code, and ease of writing, they are mostly
 in MATLAB (and should work on versions at least back to R2017a),
 unless otherwise stated.
 
 .. toctree::
 
    tutorial/serieseval
+   tutorial/realinterp1d
    tutorial/contft
    tutorial/peripois2d
    tutorial/peripois2d_python
