@@ -1,8 +1,9 @@
 List of features / changes made / release notes, in reverse chronological order.
 If not stated, FINUFFT is assumed (cuFINUFFT <=1.3 is listed separately).
 
-Master (working towards v2.5.0), 7/8/25
+Master (working towards v2.5.0), 8/13/25
 
+* Added real-valued function type-2 interpolation demo (Barnett).
 * Added functionality for adjoint execution of FINUFFT plans (Reinecke #633,
   addresses #566 and #571).
   Work arrays are now only allocated during plan execution, reducing overall
